<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.User.angeldochealthcare.activity.GetStarted_Page">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/get_image"
        android:padding="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_30sdp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/getstarted"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:textSize="@dimen/_16ssp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_Dec"
            android:textSize="@dimen/_8ssp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textFontWeight="@integer/material_motion_duration_medium_1"
            android:layout_marginTop="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/get_started_bg">

            <TextView
                android:id="@+id/btn_get_stated"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:text="@string/get_start_now"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4sdp"
                android:background="@color/get_red"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>