<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.User.angeldochealthcare.activity.LoginPage">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/welcome_to"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>
                <TextView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/angeldoc_healthcare"
                    android:textColor="@color/get_red"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/iv_bg"
                android:layout_below="@+id/otpimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_mobile_number"
                    android:textColor="#1C1A1A"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <LinearLayout
                    android:background="@drawable/edite_bg"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp">
                    <TextView
                        android:text="+91"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp">

                    <EditText
                        android:id="@+id/et_phone"
                        android:background="@drawable/edite_bg"
                        android:textColorHint="#606060"
                        android:hint="@string/enter_your_phone"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="#606060"
                        android:maxLength="10"
                        android:inputType="number"
                        android:padding="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <CheckBox
                    android:id="@+id/checkBoxTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#1C1A1A"
                    android:textStyle="normal"
                    android:textSize="@dimen/_10ssp"
                    android:checked="false"
                    android:text="@string/terms"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-2dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/get_started_bg">

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:text="@string/get_otp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>