<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.User.angeldochealthcare.activity.OTP_Pages">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/otp_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/otp_to_l0gin"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/verify_your_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone"
                android:textStyle="normal"
                android:textColor="#606060"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/vfy"
                android:textSize="@dimen/_10ssp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="5dp"
                android:background="@drawable/edite_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/otp6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/YourOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="Verify via OTP"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:textStyle="bold"
                android:textColor="#8A888B"
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/you_can_request_otp_after"
                android:textSize="@dimen/_10ssp"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/btn_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Resend"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textColor="#FFC943"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/timer_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/count_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="120"
                        android:textColor="#FFC943"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/get_started_bg">

        <TextView
            android:id="@+id/btn_Otp_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>